--- a/Standalone.given/kernel/Makefile
+++ b/Standalone.given/kernel/Makefile
@@ -26,7 +26,7 @@ all : clean kernel.elf
 # the bootloader itself. Oh well...
 #----------------------------------------------------------------------
 
-kernel.elf: main.o crt0.o serial.o
+kernel.elf: main.o crt0.o serial.o kprintf.o
 	$(LD) -nostdlib -m elf_i386 -e crt0 -Tldscript -o $@ $+
 	echo "  Done."
 
@@ -39,6 +39,8 @@ main.o: main.c
 serial.o: serial.c
 	$(CC) -c $(CFLAGS) -o $@ $<
 
+kprintf.o: kprintf.c
+	$(CC) -c $(CFLAGS) -o $@ $<
 #----------------------------------------------------------------------
 
 clean:
